--- a/4-ml.tex
+++ b/4-ml.tex
@@ -576,7 +576,7 @@ Sometimes the optimal values are not around well-identified values but are conta
   \includegraphics[width=0.32\linewidth]{figures/4-ml/SDP/delta_G0_298_900.pdf}
   \includegraphics[width=0.32\linewidth]{figures/4-ml/SDP/delta_VF_18_20.pdf}
   \includegraphics[width=0.32\linewidth]{figures/4-ml/SDP/delta_pore.pdf}
-\caption{Some SHAP dependence plots that are analyzed here.}\label{fgr:pdp_selection}
+\caption{ Some relevant SHAP dependence plots that are given here. A SHAP dependence plot corresponds to the Shapley values as a function of the feature values for every structures. These SHAP plots show the contribution of the features to the prediction given by the ML model. Each Shapley value depends not only on the value of the feature itself but also on the other features, for this reason, the plots are labeled by a relevant second feature. }\label{fgr:pdp_selection}
 \end{figure}
 
 \subsection{Local interpretability}
