--- a/1-screening.tex
+++ b/1-screening.tex
@@ -24,16 +24,16 @@ The process of sticking particles or molecules on a surface is called adsorption
   \centering
   \begin{subfigure}[b]{0.45\textwidth}
     \centering
-    \includegraphics[height=0.7\textwidth]{figures/1-screening/isotherm_298K_xenon_UFF_KAXQIL_clean.jpg}
-    \caption{Xe monocomponent isotherm}
+    \includegraphics[height=0.7\textwidth]{figures/1-screening/Isotherm_Banerjee.pdf}
+    \caption{Experimental}
   \end{subfigure}
   \hfill
   \begin{subfigure}[b]{0.45\textwidth}
     \centering
-    \includegraphics[height=0.7\textwidth]{figures/1-screening/isotherm_298K_xenon_UFF_KAXQIL_clean.jpg}
-    \caption{Xe/Kr mixture isotherm}
+    \includegraphics[height=0.7\textwidth]{figures/1-screening/Isotherm_KAXQIL_gcmc_uff.pdf}
+    \caption{Theoretical calculation}
   \end{subfigure}
-  \caption{Illustration of adsorption isotherms calculated by GCMC calculations. \todo{change figure}}\label{isotherm}
+  \caption{Illustration of monocomponent adsorption isotherms of Xe and Kr obtained experimentally (a) and calculated by GCMC calculations (b). The experimental data are made available by the authors of the Ref.~\cite{Banerjee_2016}. }\label{isotherm}
 \end{figure}
 
 %pore size
