--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -653,9 +653,9 @@ The model also uncovers less obvious contributions, looking at the Figure~\ref{f
 
 Finally, the channel dimension has a rather marginal contribution to the final predicted values, but it corresponds to a clear physical phenomenon. Depending on the dimensionality of the channel, the diffusion coefficients behave differently. As shown on the Figure~\ref{fgr:pdp_selection_diff}, a 1D channel would have a lower diffusion coefficient if all other features are similar. A 2D channel would have a higher contribution, which is also confirmed by the partial dependence plots. And a tridimensional plot would have an even higher diffusion coefficient. The model can distinguish the different types of materials using their channel dimension.
 
-In this section, we have presented an ML-based approach to compute diffusion coefficient values using omputationally chear energy descriptors combined with geometrical descriptors. This method is much more efficeint than the conventional MD simulation since it requires only one costly training seession using MD simulations at the beginning. To go even further in the speed-up process, we can generate the diffusion coefficients using alternative methods as shown by Mace et al.\ in their work \autocite{Mace_2019}. This is a work in progress and I hope that the future implmentation can recover the same diffusion values as the one derived by the MD simulations.
+In this section, we have presented an ML-based approach to compute diffusion coefficient values using computationally chear energy descriptors combined with geometrical descriptors. This method is much more efficeint than the conventional MD simulation since it requires only one costly training seession using MD simulations at the beginning. To go even further in the speed-up process, we can generate the diffusion coefficients using alternative methods as shown by Mace et al.\ in their work \autocite{Mace_2019}. This is a work in progress and I hope that the future implmentation can recover the same diffusion values as the one derived by the MD simulations.
 
-
+\clearpage
 \section{Beyond self-diffusion screenings}
 
 In this chapter, I introduced different methods of evaluating the transport properties of an adsorbate inside a nanoporous material. The most accurate method requires much more computational time and personal attention to achieve the best accuracy. For instance, we need to choose carefully the parameters of the MD simulation so that we obtain a mean square displacement data relevant for diffusion coefficient calculation. I managed to perform a screening of diffusion coefficient values for xneon and krypton to find interesting materials that exhibit both good thermodynamic and kinetic separation performance. These values have also been used to serve as a baseline data to test out other methods such as the activation energy detection and an ML model. The final ML model seems to give very promising performance by achieving a root mean square error of only $0.25$ on the base-10 logarithm of the diffusion coefficient. This means that we can evaluate quite accurately the order of magnitude of the diffusion properties. This could help quickly identify possible diffusion limitations of a promising material, but also optimize this property for faster equilibration in an adsoprtion based separation. Beyond our study, the techniques developed and to be developed in my work can also apply to membrane separation processes.
