--- a/9-conclusion.tex
+++ b/9-conclusion.tex
@@ -3,7 +3,7 @@
 
 \chapter*{General conclusions}
 
-The work presented in this thesis is 
+In this thesis, I explored different techniques to 
 
 \begin{center}
     \pgfornament[width=6cm,color=CTsemi]{88}
