--- a/6-perspectives.tex
+++ b/6-perspectives.tex
@@ -48,7 +48,7 @@ A breakthrough curve can be broken down into three different zones: an unsaturat
     \includegraphics[width=\textwidth]{figures/6-perspectives/sbmof_breakthrough.jpg}
     \caption{SBMOF-1 experimental breakthrough}\label{fgr:sbmof_breakthrough}
   \end{subfigure}
-  \caption{ (a) Different zones in a breakthrough curve reprinted with permission from the Ref.~\cite{Sharma_2023} copyright \copyright\ 2023 Taylor \& Francis Group\todo{?}. (b) Experimental breakthrough curves in SBMOF-1 for a gas mixture with 400 ppm Xe and 40 ppm Kr balanced with dry air. Reprinted with permission from Ref.~\cite{Banerjee_2016} copyright \copyright\ 2016 Springer Nature. }\label{fgr:breakthrough}
+  \caption{ (a) Different zones in a breakthrough curve reprinted from the open-access article~\cite{Sharma_2023}. (b) Experimental breakthrough curves in SBMOF-1 for a gas mixture with 400 ppm Xe and 40 ppm Kr balanced with dry air. Reprinted with permission from Ref.~\cite{Banerjee_2016} copyright \copyright\ 2016 Springer Nature. }\label{fgr:breakthrough}
 \end{figure}
 
 On the example of SBMOF-1, we can see that there is only a visible mass transfer zone for \ce{CO2}. It suggests that there is a diffusion limitation for this adsorbate in the SBMOF-1 material. However, we do not see any diffusion limitation for xenon as previously suggested by the diffusion coefficient calculated by an MD simulation ($3\times 10^{-8}$\si{\square\cm\per\s}). In the next chapter, we will propose an explanation for this discrepancy between the experimental and simulated values.
