--- a/9-conclusion.tex
+++ b/9-conclusion.tex
@@ -3,7 +3,7 @@
 
 \chapter*{General conclusions}
 
-In this thesis, I explored different techniques to 
+In this thesis, I explored different techniques to estimate
 
 \begin{center}
     \pgfornament[width=6cm,color=CTsemi]{88}
